--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CountEvents
 Title: Count events in a data frame using two variable
 Version: 0.0.0.9000
-Authors@R: person(given = "Juliana", family = "Vieira", role = c("aut", "cre"))
+Authors@R: person(given = "Juliana", , ,family = "Vieira", role = c("aut", "cre"))
 Description: This function takes a data frame or Tibble, and two variable names as argument
   It performs data validation, filtering out rows with missing values
   Then, counts the number of events in the data, grouped by the two specified variables, and returns the result as a data frame
@@ -12,3 +12,6 @@ RoxygenNote: 7.2.3
 Imports: 
     dplyr,
     tidyr
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
